// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PickitemMultiselect /> basic example 1`] = `
<div
  className="xui-pickitem--body"
  role="presentation"
>
  <div
    className="xui-pickitem-multiselect--checkbox xui-styledcheckboxradio"
  >
    <label
      className="xui-styledcheckboxradio--field"
      onClick={[Function]}
      role="presentation"
    >
      <input
        aria-labelledby="testPickitemCheckboxId"
        className="xui-styledcheckboxradio--input"
        defaultChecked={false}
        disabled={false}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={-1}
        type="checkbox"
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-pickitem--input"
      />
      <span
        className="xui-styledcheckboxradio--label xui-pickitem--text xui-pickitem-multiselect--label"
        id="testPickitemCheckboxId"
      >
        <span
          className=""
        >
          Item
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`<PickitemMultiselect /> is selected, adds truncation and custom classes 1`] = `
<div
  className="xui-pickitem--body"
  role="presentation"
>
  <div
    className="custom-checkbox xui-pickitem-text-truncated xui-pickitem-multiselect--checkbox xui-styledcheckboxradio"
  >
    <label
      className="xui-styledcheckboxradio--field"
      onClick={[Function]}
      role="presentation"
    >
      <input
        aria-labelledby="testPickitemCheckboxId"
        checked={true}
        className="xui-styledcheckboxradio--input"
        disabled={false}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={-1}
        type="checkbox"
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-pickitem--input"
      />
      <span
        className="xui-styledcheckboxradio--label xui-pickitem--text xui-pickitem-multiselect--label xui-pickitem-text-truncated"
        id="testPickitemCheckboxId"
      >
        <span
          className="xui-pickitem-text-truncated"
        >
          <span
            className="xui-pickitem-text-truncated"
          >
            Item
          </span>
        </span>
      </span>
    </label>
  </div>
</div>
`;
